# vcstools

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Copyright.txt  LICENSE  Makefile  README.md  ReadMe.txt  beamform.nf  calcGain.py  calcWaveNumbers.c  concat.sh  gather_gains.sh  makeTiedArrayBeam.batch  make_pabeam_batch.py  nexflow.config  nextflow.config  pabeam.c  pabeam.cu  pabeam.py  plotPhasedArrayPattern.py  pom.xml  setup.py
.github/workflows/: run_python_tests.yaml
ascii_to_bin/: CMakeLists.txt  ascii_to_bin.c
beam_sim/: .gitignore  Makefile  README  pabeam.c  pabeam.cu  pabeam_kernal.cu  pabeam_notile.cu  pabeam_with_tile.cu
beam_sim/FEE2016/: Makefile  README  beam2016implementation.h  mwa_beam_interface.cpp  mwa_beam_interface.h
beam_sim/python/: Makefile  concat.sh  make_pabeam_batch.py  pabeam.py  showspec.batch
beam_sim/src/: Makefile  pabeam.cu  pabeam.h  pabeam_kernal.cu  utils.cu  (+3 more)
build_lfiles/: CMakeLists.txt  build_lfiles.c  compress.cpp  compress.h  uvcompress.cpp
check_corr/: CMakeLists.txt  check_corr.c
database/: .vcs.db  CMakeLists.txt  MWA_Trcvr_tile_56.csv  cmd_vcs_db_cat.py  database_vcs.py  init_cmd_db.py  known_repeating_FRBs.csv  points_of_interest.csv  submit_to_database.py
doc/: Makefile  doc.tex
docker/: Dockerfile
docs/: Makefile  conf.py  index.rst  make_scripts_rst.sh  modules.rst  vcstools.rst
galaxy-scripts/: CMakeLists.txt  Makefile
galaxy-scripts/database/: cmd_vcs_db_cat.py  database_vcs.py  submit_to_database.py
galaxy-scripts/scripts/: .gitignore  build_mwacutils.sh  calibrate_vcs.py  checks.py  cleanup.py  find_pulsar_in_obs.py  get_voltage_obs.py  plot_BPcal_128T.py  process_vcs.py  rename_corr_output.py  test_mwacutils.sh  vcs_obs_w_files.txt  write_rts_in_file.py
galaxy-scripts/utils/: calc_ephem.py  check_disk_usage.sh  job_submit.py  mdir.py  mwa_metadb_utils.py  plotFlatTileBeam.py  plotPolarTileBeam.py  plotTiedArrayBeam.py  plotTileBeam.py  zapchan.py
get_delays/: CMakeLists.txt  get_delays.c
get_weights/: CMakeLists.txt  get_weights.c
gpu_utils/: .gpu_utils.cu.swp  CMakeLists.txt  cuda_error.h  gpu_utils.cu  gpu_utils.h  reduce.h  reduce_kernel.cu
invert_antenna/: CMakeLists.txt  invert_antenna.c
make_beam/: 0.html  1.html  CMakeLists.txt  README.md  ascii_header.c  beam_common.c  beam_common.h  beam_psrfits.c  beam_psrfits.h  beam_vdif.c  beam_vdif.h  chk_vdif.c  cppreport.xml  filter.c  filter.h  filter.txt  form_beam.c  form_beam.cu  form_beam.h  gen_coeff.py  get_delays_small.c  index.html  ipfb.cu  ipfb.h  make_beam.c  make_beam.h  mwa_header.h  mycomplex.h  style.css
make_beam_small/: CMakeLists.txt  beam_common.c  beam_common.h  beam_psrfits.c  beam_psrfits.h  beam_vdif.c  beam_vdif.cu  beam_vdif.h  beamformer.h  filter.c  filter.h  filter_coeffs.txt  form_beam.c  form_beam.cu  form_beam.h  get_delays_small.c  ipfb.cu  ipfb.h  make_beam_small.c  make_beam_small.h  mwa_header.h  mycomplex.h  vdifbeam.c  vdifbeam.h
make_psrfits/: CMakeLists.txt  correct_offset.c  make_psrfits.c  splice_psrfits.c  test_psrfits.c
mwac_utils/: CMakeLists.txt  antenna_mapping.c  antenna_mapping.h  beamer_version.h  mwac_utils.c  mwac_utils.h  uvfits.c  uvfits.h
nextflow/: beamform.nf  nextflow.config
offline_correlator/: CMakeLists.txt  acquire_data.h  buffer_sizes.h  corr_utils.c  corr_utils.h  fourbit.c  fourbit.h  mwac_offline.cu  packet.h  ringbuffer.c  ringbuffer.h  run_beamer.h  twopip_header.h
read_mwac/: CMakeLists.txt  read_mwac.c
read_pfb/: CMakeLists.txt  read_pfb.c  test.c
scripts/: .gitignore  CMakeLists.txt  RVM_fit.py  auto_plot.bash  bf_adjust_flags.py  build_mwacutils.sh  calibrate_vcs.py  check_disk_usage.sh  check_download.py  check_quota.sh  checks.py  cleanup.py  cmd_vcs_db_cat.py  combine_calibrations.py  create_ics_psrfits.py  create_psrfits.sh  fetch_mwacutils.sh  file_maxmin.py  find_pulsar_in_obs.py  fits_db.py  fits_params.sh  fix_offset.py  get_meta.py  get_voltage_obs.py  hdr.fits  import_mwacutils.sh  launch_trace.py  mwa_metadb_utils.py  obs_query.py  pabeam.py  plot_BPcal_128T.py  prepare.py  process_all.py  process_vcs.py  prof_estimate.py  recombine.py  rename_corr_output.py  reorder_chans.py  rm_synthesis.py  rts2ao.py  (+16 more)
scripts/plotting/: calc_ephem.py  plotFlatTileBeam.py  plotPolarTileBeam.py  plotSkyMap.py  plotTiedArrayBeam.py  plot_BPcal_128T.py
test/: coherent.par  coherent.std  full_test.sh  make_auxfiles.py  norm_test.sh  part_test.sh  psrfits_header.txt  timing_test.sh  toa_test.sh  vdif_test.sh
tests/: CMakeLists.txt  azza_track.c  beam_model_jones_comparison.c  sky_model_jones_comparison.c  test_a_process_vcs.py  test_beam_calc.py  test_catalogue_utils.py  test_check_files.py  test_checks.py  test_find_pulsar_in_obs.py  test_general_utils.py  test_make_beam.c  test_mwa_hyperbeam.py  test_mwa_metadb_utils.py  test_prof_utils.py  test_radiometer_equation.py  test_sn_flux_est.py  test_spectral_fit.py  tests.c  tests.h
tests/test_files/: 1127939368_J05342200.bestprof  1222697776_PSR_J0034-0721.pfd.bestprof  1222697776_PSR_J2330-2005.pfd.bestprof  1225462936_J0152-1637.bestprof  1225713560_J2241-5236.bestprof  1226062160_J2330-2005.bestprof  J0953+0755.csv  J1645-0317.csv  checks_get_files_1118463408_raw.txt  checks_get_files_1221832280_ics.txt  checks_get_files_1221832280_tar_ics.txt
utils/: CMakeLists.txt  aocal.py  calc_ephem.py  check_disk_usage.sh  config.py  config_vcs.py  get_MWAobsInfo.py  job_submit.py  mdir.py  mwa_metadb_utils.py  plotFlatTileBeam.py  plotPolarTileBeam.py  plotSkyMap.py  plotTiedArrayBeam.py  prof_utils.py  sn_flux_est.py  stickel.py  zapchan.py
vcstools/: analyse_psf.py  aocal.py  barycenter_utils.py  beam_calc.py  beam_sim.py  catalogue_utils.py  check_files.py  client.py  config.py  data_load.py  general_utils.py  gfit.py  job_submit.py  metadb_utils.py  pointing_utils.py  prof_utils.py  progress_bar.py  pulsar_spectra.py  radiometer_equation.py  reg_fit.py  rm_synth.py  rm_synth_utils.py  sn_flux_est.py  sn_flux_utils.py  spectral_fit.py  stickel.py
(+32 files in other folders)
